--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+../UPE-log-reader/access.log
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
